// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pager renders the Pager correctly with the Mint Theme 1`] = `
.c16 {
  background: transparent;
  border: none;
  color: rgba(0,0,0,0.9);
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 14px;
  outline: none;
  width: 30px;
}

.c16:-webkit-autofill {
  -webkit-box-shadow: 0 0 0px 1000px #FFF inset;
  -webkit-box-border: none;
}

.c16::-webkit-input-placeholder {
  color: rgba(0,0,0,0.3);
}

.c16::-moz-placeholder {
  color: rgba(0,0,0,0.3);
}

.c16:-ms-input-placeholder {
  color: rgba(0,0,0,0.3);
}

.c16::placeholder {
  color: rgba(0,0,0,0.3);
}

.c16:invalid,
.c16:required {
  box-shadow: none;
}

.c4 {
  display: inline-block;
  position: relative;
  color: rgba(0,0,0,0.65);
  background-color: transparent;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 24px;
  width: 24px;
}

.c4:hover {
  color: rgba(0,0,0,0.90);
  background-color: transparent;
}

.c4::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e910";
  font-size: 16px;
  font-style: normal;
  font-weight: normal;
  line-height: 16px;
  vertical-align: middle;
  display: block;
}

.c9 {
  color: rgba(0,0,0,0.9);
  display: block;
  font-weight: 600;
  padding-bottom: 8px;
}

.c9 .c19,
.c9 .sc-ifAKCX {
  vertical-align: middle;
}

.c14 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: #fff;
  border: 1px solid #668491;
  box-sizing: border-box;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 0 0 70%;
  -ms-flex: 0 0 70%;
  flex: 0 0 70%;
  margin: 0;
  min-height: 40px;
  padding-left: 11px;
  padding-right: 11px;
}

.c14 .c15 {
  height: calc(40px - 4px);
}

.c14 .c15:-webkit-autofill {
  margin-top: 2px;
  height: calc(40px - 8px);
}

.c14 input::-ms-clear {
  display: none;
}

.c14 input::-webkit-contacts-auto-fill-button {
  display: none!important;
}

.c3 input {
  height: 26px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0px 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-width: 0;
  font-size: 13px;
  height: 39px;
  max-height: 39px;
  border-width: 1px 1px 1px 1px;
  border-style: none solid solid solid;
  border-color: #CCD6DA;
  background-color: #F9FAFB;
  border-top: none;
}

.c0 .carbon-input-icon {
  border: none;
  background: none;
}

.c0 .carbon-input-icon:hover {
  background: none;
  color: #000000;
}

.c0 .common-input__field:focus-within {
  outline: 3px solid #FFB500;
}

.c0 .common-input__input {
  border: 1px solid #668491;
}

.c0 .common-input__input:active,
.c0 .common-input__input:hover,
.c0 .common-input__input:focus {
  border: 1px solid #668491;
}

.c0 .common-input__input:focus {
  border: 1px solid #668491;
  color: #000000;
}

.c0 .common-input__input:focus ~ label .carbon-input-icon,
.c0 .common-input__input:focus ~ label .carbon-input-icon:hover {
  border: none;
  background: none;
  color: #000000;
}

.c0 .common-input__input:hover ~ label .carbon-input-icon {
  border: none;
  background: none;
  color: #000000;
}

.c0 .common-input__input:hover ~ label .carbon-input-icon:hover {
  border: none;
  background: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 30%;
  -ms-flex: 1 1 30%;
  flex: 1 1 30%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1 .carbon-dropdown {
  width: 55px;
  margin: 0 4px;
}

.c1 .carbon-dropdown input {
  line-height: 26px;
  padding: 0 8px;
}

.c1 .carbon-dropdown span:before {
  margin-top: 4px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5.c5 .c13 {
  padding: 0;
  margin: 8px 4px 0 4px;
  height: 26px;
  line-height: 26px;
  min-height: 24px;
}

.c5.c5 .c13 .c15 {
  text-align: center;
  height: 24px;
  padding: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 12px;
}

.c6 {
  padding: 0 10px;
  font-size: 13px;
  border-width: 0;
  background-color: transparent;
  cursor: pointer;
  margin-left: 7px;
  margin-right: 7px;
  color: rgba(0,0,0,0.90);
  color: rgba(0,0,0,0.3);
  cursor: not-allowed;
}

.c6:focus {
  outline: solid 3px #FFB500;
  padding: 5px 10px;
}

.c17 {
  padding: 0 10px;
  font-size: 13px;
  border-width: 0;
  background-color: transparent;
  cursor: pointer;
  margin-left: 7px;
  margin-right: 7px;
  color: rgba(0,0,0,0.90);
}

.c17:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  padding: 5px 10px;
}

.c17:focus {
  outline: solid 3px #FFB500;
  padding: 5px 10px;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 30%;
  -ms-flex: 1 1 30%;
  flex: 1 1 30%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c11 + .c10 {
  margin-top: 16px;
}

.c12 {
  display: block;
}

<div
  className="c0"
  data-component="pager"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span>
        Show
      </span>
      <div
        className="carbon-dropdown common-input--with-icon c3 common-input"
        data-component="dropdown"
        data-element="page-select"
      >
        <div
          className="common-input__field"
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <input
            autoComplete="off"
            className="carbon-dropdown__input common-input__input"
            data-element="input"
            id="guid-12345"
            name={null}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={true}
            value={10}
          />
          <label
            htmlFor="guid-12345"
          >
            <span
              className="c4 carbon-input-icon"
              data-component="icon"
              data-element="dropdown"
              disabled={false}
              fontSize="small"
              type="dropdown"
            />
          </label>
        </div>
        <input
          data-element="hidden-input"
          readOnly={true}
          type="hidden"
          value={10}
        />
      </div>
      <span>
        items
      </span>
    </div>
  </div>
  <div
    className="c5"
  >
    <button
      className="c6"
      data-element="pager-link-first"
      disabled={true}
      onClick={[Function]}
    >
      First
    </button>
    <button
      className="c6"
      data-element="pager-link-previous"
      disabled={true}
      onClick={[Function]}
    >
      Previous
    </button>
    <div
      className="c7"
    >
      <span
        className="c8"
      >
        Page 
      </span>
      <label
        className="c9"
        data-element="label"
        htmlFor="Pager_guid-12345"
        width={30}
      >
        <div
          className="c10 c11"
          data-element="current-page"
        >
          <div
            className="c12"
          >
            <div
              className="c13 c14"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="presentation"
              size="medium"
            >
              <input
                aria-invalid={false}
                className="c15 c16"
                data-element="input"
                id="Pager_guid-12345"
                name="guid-12345"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                size="medium"
                type="text"
                value="1"
              />
            </div>
          </div>
        </div>
      </label>
      <span
        className="c8"
      >
         of 
        10
      </span>
    </div>
    <button
      className="c17"
      data-element="pager-link-next"
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
    <button
      className="c17"
      data-element="pager-link-last"
      disabled={false}
      onClick={[Function]}
    >
      Last
    </button>
  </div>
  <div
    className="c18"
  >
    100
     
    items
  </div>
</div>
`;

exports[`Pager renders the Pager without pageSizeSelection 1`] = `
.c13 {
  background: transparent;
  border: none;
  color: rgba(0,0,0,0.9);
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-size: 14px;
  outline: none;
  width: 30px;
}

.c13:-webkit-autofill {
  -webkit-box-shadow: 0 0 0px 1000px #FFF inset;
  -webkit-box-border: none;
}

.c13::-webkit-input-placeholder {
  color: rgba(0,0,0,0.3);
}

.c13::-moz-placeholder {
  color: rgba(0,0,0,0.3);
}

.c13:-ms-input-placeholder {
  color: rgba(0,0,0,0.3);
}

.c13::placeholder {
  color: rgba(0,0,0,0.3);
}

.c13:invalid,
.c13:required {
  box-shadow: none;
}

.c6 {
  color: rgba(0,0,0,0.9);
  display: block;
  font-weight: 600;
  padding-bottom: 8px;
}

.c6 .c15,
.c6 .sc-ifAKCX {
  vertical-align: middle;
}

.c11 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: #fff;
  border: 1px solid #668491;
  box-sizing: border-box;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 0 0 70%;
  -ms-flex: 0 0 70%;
  flex: 0 0 70%;
  margin: 0;
  min-height: 40px;
  padding-left: 11px;
  padding-right: 11px;
}

.c11 .c12 {
  height: calc(40px - 4px);
}

.c11 .c12:-webkit-autofill {
  margin-top: 2px;
  height: calc(40px - 8px);
}

.c11 input::-ms-clear {
  display: none;
}

.c11 input::-webkit-contacts-auto-fill-button {
  display: none!important;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0px 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-width: 0;
  font-size: 13px;
  height: 39px;
  max-height: 39px;
  border-width: 1px 1px 1px 1px;
  border-style: none solid solid solid;
  border-color: #CCD6DA;
  background-color: #F9FAFB;
  border-top: none;
}

.c0 .carbon-input-icon {
  border: none;
  background: none;
}

.c0 .carbon-input-icon:hover {
  background: none;
  color: #000000;
}

.c0 .common-input__field:focus-within {
  outline: 3px solid #FFB500;
}

.c0 .common-input__input {
  border: 1px solid #668491;
}

.c0 .common-input__input:active,
.c0 .common-input__input:hover,
.c0 .common-input__input:focus {
  border: 1px solid #668491;
}

.c0 .common-input__input:focus {
  border: 1px solid #668491;
  color: #000000;
}

.c0 .common-input__input:focus ~ label .carbon-input-icon,
.c0 .common-input__input:focus ~ label .carbon-input-icon:hover {
  border: none;
  background: none;
  color: #000000;
}

.c0 .common-input__input:hover ~ label .carbon-input-icon {
  border: none;
  background: none;
  color: #000000;
}

.c0 .common-input__input:hover ~ label .carbon-input-icon:hover {
  border: none;
  background: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 30%;
  -ms-flex: 1 1 30%;
  flex: 1 1 30%;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1 .carbon-dropdown {
  width: 55px;
  margin: 0 4px;
}

.c1 .carbon-dropdown input {
  line-height: 26px;
  padding: 0 8px;
}

.c1 .carbon-dropdown span:before {
  margin-top: 4px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2.c2 .c10 {
  padding: 0;
  margin: 8px 4px 0 4px;
  height: 26px;
  line-height: 26px;
  min-height: 24px;
}

.c2.c2 .c10 .c12 {
  text-align: center;
  height: 24px;
  padding: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 12px;
}

.c3 {
  padding: 0 10px;
  font-size: 13px;
  border-width: 0;
  background-color: transparent;
  cursor: pointer;
  margin-left: 7px;
  margin-right: 7px;
  color: rgba(0,0,0,0.90);
  color: rgba(0,0,0,0.3);
  cursor: not-allowed;
}

.c3:focus {
  outline: solid 3px #FFB500;
  padding: 5px 10px;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 30%;
  -ms-flex: 1 1 30%;
  flex: 1 1 30%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c8 + .c7 {
  margin-top: 16px;
}

.c9 {
  display: block;
}

<div
  className="c0"
  data-component="pager"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  >
    <button
      className="c3"
      data-element="pager-link-first"
      disabled={true}
      onClick={[Function]}
    >
      First
    </button>
    <button
      className="c3"
      data-element="pager-link-previous"
      disabled={true}
      onClick={[Function]}
    >
      Previous
    </button>
    <div
      className="c4"
    >
      <span
        className="c5"
      >
        Page 
      </span>
      <label
        className="c6"
        data-element="label"
        htmlFor="Pager_guid-12345"
        width={30}
      >
        <div
          className="c7 c8"
          data-element="current-page"
        >
          <div
            className="c9"
          >
            <div
              className="c10 c11"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="presentation"
              size="medium"
            >
              <input
                aria-invalid={false}
                className="c12 c13"
                data-element="input"
                id="Pager_guid-12345"
                name="guid-12345"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                size="medium"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </label>
      <span
        className="c5"
      >
         of 
        1
      </span>
    </div>
    <button
      className="c3"
      data-element="pager-link-next"
      disabled={true}
      onClick={[Function]}
    >
      Next
    </button>
    <button
      className="c3"
      data-element="pager-link-last"
      disabled={true}
      onClick={[Function]}
    >
      Last
    </button>
  </div>
  <div
    className="c14"
  >
    100
     
    items
  </div>
</div>
`;
